syntax = "proto3";

option go_package = "./pb";

package pb;


//   评论
message Comment {
  int64 id = 1;
  int64 user_id = 2;
  int64 video_id = 3;
  string content = 4;
}

message AddCommentReq {
  int64 video_id = 1;
  int64 user_id = 2;
  string content = 3;
}

message AddCommentResp {
}

message GetCommentListByIdReq {
  int64 id = 1;
}

message GetCommentListByIdResp {
  repeated Comment comments = 1;
}

message DelCommentReq {
  int64 comment_id = 1;
  int64 user_id = 2;
}

message DelCommentResp {
}

message GetCommentCountByVideoIdReq {
  int64 video_id = 1;
}

message GetCommentCountByVideoIdResp {
  int64 count = 1;
}

// 点赞
message VideoLikeReq {
  int64 video_id = 1;
  int64 user_id = 2;
}

message VideoLikeResp {
}

message VideoUnlikeReq {
  int64 video_id = 1;
  int64 user_id = 2;
}

message VideoUnlikeResp {
}

message GetVideoLikedCountByVideoIdReq {
  int64 video_id = 1;
}

message GetVideoLikedCountByVideoIdResp {
  int64 like_count = 2;
}

message GetUserLikeVideoIdListReq {
  int64 user_id = 1;
}

message GetUserLikeVideoIdListResp {
  repeated int64 video_id_list = 1;
}

// 关注
message FollowUserReq {
  int64 user_id = 1;
  int64 follower_id = 2;
}

message FollowUserResp {
}

message UnfollowUserReq {
  int64 user_id = 1;
  int64 follower_id = 2;
}

message UnfollowUserResp{
}

message GetUserFollowerCountReq {
  int64 user_id = 1;
}

message GetUserFollowerCountResp {
  int64 follower_count = 1;
}

message GetUserFollowCountReq {
  int64 user_id = 1;
}

message GetUserFollowCountResp {
  int64 follow_count = 1;
}

message GetUserFollowIdListReq {
  int64 user_id = 1;
}

message GetUserFollowIdListResp {
  repeated int64 user_id_list = 1;
}

message GetUserFollowerIdListReq {
  int64 user_id = 1;
}

message GetUserFollowerIdListResp {
  repeated int64 user_id_list = 1;
}

service social {
  //  评论相关功能
  rpc AddComment(AddCommentReq) returns (AddCommentResp);
  rpc DelComment(DelCommentReq) returns (DelCommentResp);
  rpc GetVideoCommentListById(GetCommentListByIdReq) returns (GetCommentListByIdResp);
  rpc GetCommentCountByVideoId(GetCommentCountByVideoIdReq) returns (GetCommentCountByVideoIdResp);
  //  点赞相关功能
  rpc VideoLike(VideoLikeReq) returns (VideoLikeResp);
  rpc VideoUnlike(VideoUnlikeReq) returns (VideoLikeResp);
  rpc GetVideoLikedCountByVideoId(GetVideoLikedCountByVideoIdReq) returns (GetVideoLikedCountByVideoIdResp);
  rpc GetUserLikeVideoIdList(GetUserLikeVideoIdListReq) returns (GetUserLikeVideoIdListResp);
  //  关注功能
  rpc FollowUser(FollowUserReq) returns (FollowUserResp);
  rpc UnfollowUser(UnfollowUserReq) returns (UnfollowUserResp);
  rpc GetUserFollowerCount(GetUserFollowerCountReq) returns (GetUserFollowerCountResp);
  rpc GetUserFollowCount(GetUserFollowCountReq) returns (GetUserFollowCountResp);
  rpc GetUserFollowIdList(GetUserFollowIdListReq) returns (GetUserFollowIdListResp);
  rpc GetUserFollowerIdList(GetUserFollowerIdListReq) returns (GetUserFollowerIdListResp);
}