syntax = "proto3";

option go_package = "./pb";

package pb;

message UserInfo {
    int64 id = 1;
    string username = 2;
}


message RegisterUserReq {
    string username = 1; //用户名称
    string password = 2; //用户密码
}

message RegisterUserResp {
    string access_token = 1;
    int64  refresh_after = 2;
    int64  expire_time = 3;
}

message GenerateTokenReq {
    int64 user_id = 1;
}
message GenerateTokenResp {
    string access_token = 1;
    int64  refresh_after = 2;
    int64  expire_time = 3;
}

message LoginReq {
    string username = 1;
    string password = 2;
}

message LoginResp {
    string access_token = 1;
    int64  refresh_after = 2;
    int64  expire_time = 3;
}

message GetUserInfoReq {
    int64 id = 1;
}

message GetUserInfoResp {
    UserInfo user = 1;
}

message UpdateUserReq {
    int64 id = 1;
    string username = 2;
    string password = 3;
}

message UpdateUserResp {
}



service user {
    rpc RegisterUser(RegisterUserReq) returns (RegisterUserResp);
    rpc GenerateToken(GenerateTokenReq) returns (GenerateTokenResp);
    rpc Login(LoginReq) returns (LoginResp);
    rpc GetUserInfo(GetUserInfoReq) returns (GetUserInfoResp);
    rpc UpdateUser(UpdateUserReq) returns (UpdateUserResp);
}